--- a/src/Components/Client.css
+++ b/src/Components/Client.css
@@ -1,12 +1,32 @@
+* {
+  box-sizing: border-box;
+}
 .client {
+  background: rgb(238, 174, 202);
+  background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+  position: relative;
   display: flex;
+  margin: 10px 0;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.client > img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
 }
 
 .client > div {
+  position: relative;
   display: flex;
+  padding: 5px;
   margin-left: 20px;
   flex-direction: column;
   justify-content: center;
+}
+
+.client > div > span {
+  padding: 5px;
 }
 
 .gender {
@@ -14,8 +34,24 @@
   height: 25px;
 }
 
-div > img {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
+@media screen and (min-width: 320px) and (max-width: 359px) {
+  .client > img {
+    margin: auto 0;
+    width: 75px;
+    height: 75px;
+  }
+  .client > div {
+    margin-left: 5px;
+  }
+}
+
+@media screen and (min-width: 360px) and (max-width: 1023px) {
+  .client > img {
+    margin: auto 0;
+    width: 100px;
+    height: 100px;
+  }
+  .client > div {
+    margin-left: 5px;
+  }
 }
